manifests/node-next-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node-next
  name: node-next
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-next
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-next
    spec:
      containers:
      - image: yoichi00/container-ren:node-next
        name: node-next
        resources: {}
status: {}
