manifests/system-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: management-system
spec:
  rules:
  - host: chat.192.168.99.109.nip.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: go-gin
          servicePort: 8080

  - host: chat.192.168.99.109.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: node-next
          servicePort: 80
